language/move-lang/tests/move_check/locals/eliminate_temps.exp
error: 

   ┌── tests/move_check/locals/eliminate_temps.move:7:39 ───
   │
 7 │         let (boom, u): (&u64, u64) = (&mut x, x);
   │                                       ------ It is still being mutably borrowed by this reference
   │                                               ^ Invalid copy of local 'x'
   │

error: 

    ┌── tests/move_check/locals/eliminate_temps.move:14:36 ───
    │
 14 │         let (f, u): (&u64, u64) = (r, *r);
    │                                    - It is still being mutably borrowed by this reference
    │                                       ^^ Invalid dereference.
    │

error: 

    ┌── tests/move_check/locals/eliminate_temps.move:20:36 ───
    │
 20 │         let (f, u): (&u64, u64) = (&mut s.f, s.f);
    │                                    -------- Field 'f' is still being mutably borrowed by this reference
    │                                              ^^^ Invalid immutable borrow at field 'f'.
    │

error: 

    ┌── tests/move_check/locals/eliminate_temps.move:27:33 ───
    │
 27 │         let (f, u): (&R, &R) = (borrow_global_mut<R>(a), borrow_global<R>(a));
    │                                 ----------------------- It is still being mutably borrowed by this reference
    │                                                          ^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'
    │

